# HIDL

./: .gitignore  404.html  CNAME  Cargo.toml  HIDL.md  README.md  asset_delivery.html  book.toml  build.rs  execution_context.html  hypercosm.hidl  index.html  print.html  run.ps1  run.sh  searchindex.js  searchindex.json  world.html
.github/workflows/: ci.yml  site.yml
json/: hypercosm.json
proto-docs/: README.md  SUMMARY.md  asset_delivery.md  execution_context.md  world.md
proto/hypercosm/: asset_delivery.hidl  core.hidl  execution.hidl  world.hidl
src/: README.md  ast.rs  docs.rs  eval.rs  grammar.lalrpop  hir.rs  lib.rs  vfs.rs
