[package]
name = "hidl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
debug2 = { git = "https://github.com/aDotInTheVoid/debug2/" }
fs-err = "2.6.0"
lalrpop-util = { version = "0.19.6", features = ["lexer"] }
lalrpop_codespan = { git = "https://gitea.treehouse.systems/aDot/lalrpop_codespan" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"

[build-dependencies]
lalrpop = "0.19.6"
